add directions and new colors

--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,9 @@
     <meta name='keywords' content='Buczek, "mapa Buczku" , "ulice w Buczku", "urząd gminy Buczek", truskawka'>
     <title>Odnajdź się w Buczku!</title>
     <link href="https://fonts.googleapis.com/css?family=Jura:400,700&display=swap&subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+        integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"> -->
+    <script src="https://kit.fontawesome.com/a5d10ed2bf.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="mobile_style.css">
 </head>
 
@@ -68,6 +69,7 @@
                     <option value="osrkultury">ośr. kultury</option>
                     <option value="osrzdrowia">ośr. zdrowia</option>
                     <option value="poczta">poczta</option>
+                    <option value="pizzeria">pizzeria</option>
                     <option value="szkola">szkoła</option>
                     <option value="urzadgminy">urząd gminy</option>
                 </select>
@@ -119,17 +121,31 @@
                     alt="ulica wschodnia">
                 <img data-ulica="ulzielona button mainmap" class="zielona street" src="img/zielona.png"
                     alt="ulica zielona">
-                <i class="fas fa-church kosciol"></i>
-                <i class="fas fa-envelope poczta"></i>
-                <i class="fas fa-school urzadgminy"></i>
-                <i class="fas fa-dollar-sign bank"></i>
-                <i class="fas fa-graduation-cap szkola"></i>
-                <i class="fas fa-hospital-alt osrzdrowia"></i>
-                <i class="fas fa-briefcase-medical apteka"></i>
-                <i class="fas fa-glass-martini bar"></i>
-                <i class="fas fa-theater-masks osrkultury"></i>
-                <i class="fas fa-car-side lpg"></i>
-                <!-- <i class="fas fa-pizza-slice"></i> -->
+                <i class="fas build fa-church kosciol"></i>
+                <i class="fas build fa-envelope poczta"></i>
+                <i class="fas build fa-school urzadgminy"></i>
+                <i class="fas build fa-dollar-sign bank"></i>
+                <i class="fas build fa-graduation-cap szkola"></i>
+                <i class="fas build fa-hospital-alt osrzdrowia"></i>
+                <i class="fas build fa-briefcase-medical apteka"></i>
+                <i class="fas build fa-glass-martini bar"></i>
+                <i class="fas build fa-theater-masks osrkultury"></i>
+                <i class="fas build fa-car-side lpg"></i>
+                <i class="fas build fa-pizza-slice pizzeria"></i>
+                <div class="directions">
+                    <p>do Łasku</p>
+                    <i class="fas fa-arrow-up"></i>
+                    <p>do Zelowa</p>
+                    <i class="fas fa-arrow-up"></i>
+                    <p>do Szczercowa</p>
+                    <i class="fas fa-arrow-up"></i>
+                    <p>do Sędziejowic</p>
+                    <i class="fas fa-arrow-up"></i>
+                    <p>do Maleni</p>
+                    <i class="fas fa-arrow-up"></i>
+                    <p>do Brodni</p>
+                    <i class="fas fa-arrow-up"></i>
+                </div>
             </div>
         </main>
         <footer>
