add orientation landscape

--- a/index.html
+++ b/index.html
@@ -23,56 +23,58 @@
             <h1>Odnajdź się w Buczku</h1>
         </header>
         <main>
-            <div class="select_inputs">
-                <label for="street">Ulica</label>
-                <select class="select_streets" name="street" onchange="handleSelectStreets()">
-                    <option value="none">---</option>
-                    <option value="brojsce">brojsce</option>
-                    <option value="cicha">cicha</option>
-                    <option value="debowa">dębowa</option>
-                    <option value="glowna">główna</option>
-                    <option value="gorna">górna</option>
-                    <option value="krotka">krótka</option>
-                    <option value="lgow">lgów</option>
-                    <option value="lipowa">lipowa</option>
-                    <option value="lakowa">łąkowa</option>
-                    <option value="modrzewiowa">modrzewiowa</option>
-                    <option value="osiedle">os. Młodych</option>
-                    <option value="parcela">parcela</option>
-                    <option value="parkowa">parkowa</option>
-                    <option value="pienki">pieńki</option>
-                    <option value="poludniowa">południowa</option>
-                    <option value="poprzeczna">poprzeczna</option>
-                    <option value="prosta">prosta</option>
-                    <option value="sloneczna">słoneczna</option>
-                    <option value="spacerowa">spacerowa</option>
-                    <option value="spokojna">spokojna</option>
-                    <option value="spoldzielcza">spółdzielcza</option>
-                    <option value="szadek">szadek</option>
-                    <option value="szkolna">szkolna</option>
-                    <option value="topolowa">topolowa</option>
-                    <option value="waska">wąska</option>
-                    <option value="wschodnia">wschodnia</option>
-                    <option value="wygwizdow">wygwizdów</option>
-                    <option value="zielona">zielona</option>
-                </select>
-            </div>
-            <div class="select_inputs">
-                <label for="buildings">Budynek</label>
-                <select class="select_buildings" name="buildings" onchange="handleSelectBuildings()">
-                    <option value="none">---</option>
-                    <option value="apteka">apteka</option>
-                    <option value="bank">bank</option>
-                    <option value="bar">bar</option>
-                    <option value="kosciol">kościół</option>
-                    <option value="lpg">lpg</option>
-                    <option value="osrkultury">ośr. kultury</option>
-                    <option value="osrzdrowia">ośr. zdrowia</option>
-                    <option value="poczta">poczta</option>
-                    <option value="pizzeria">pizzeria</option>
-                    <option value="szkola">szkoła</option>
-                    <option value="urzadgminy">urząd gminy</option>
-                </select>
+            <div class="input_area">
+                <div class="select_inputs">
+                    <label for="street">Ulica</label>
+                    <select class="select_streets" name="street" onchange="handleSelectStreets()">
+                        <option value="none">---</option>
+                        <option value="brojsce">brojsce</option>
+                        <option value="cicha">cicha</option>
+                        <option value="debowa">dębowa</option>
+                        <option value="glowna">główna</option>
+                        <option value="gorna">górna</option>
+                        <option value="krotka">krótka</option>
+                        <option value="lgow">lgów</option>
+                        <option value="lipowa">lipowa</option>
+                        <option value="lakowa">łąkowa</option>
+                        <option value="modrzewiowa">modrzewiowa</option>
+                        <option value="osiedle">os. Młodych</option>
+                        <option value="parcela">parcela</option>
+                        <option value="parkowa">parkowa</option>
+                        <option value="pienki">pieńki</option>
+                        <option value="poludniowa">południowa</option>
+                        <option value="poprzeczna">poprzeczna</option>
+                        <option value="prosta">prosta</option>
+                        <option value="sloneczna">słoneczna</option>
+                        <option value="spacerowa">spacerowa</option>
+                        <option value="spokojna">spokojna</option>
+                        <option value="spoldzielcza">spółdzielcza</option>
+                        <option value="szadek">szadek</option>
+                        <option value="szkolna">szkolna</option>
+                        <option value="topolowa">topolowa</option>
+                        <option value="waska">wąska</option>
+                        <option value="wschodnia">wschodnia</option>
+                        <option value="wygwizdow">wygwizdów</option>
+                        <option value="zielona">zielona</option>
+                    </select>
+                </div>
+                <div class="select_inputs">
+                    <label for="buildings">Budynek</label>
+                    <select class="select_buildings" name="buildings" onchange="handleSelectBuildings()">
+                        <option value="none">---</option>
+                        <option value="apteka">apteka</option>
+                        <option value="bank">bank</option>
+                        <option value="bar">bar</option>
+                        <option value="kosciol">kościół</option>
+                        <option value="lpg">lpg</option>
+                        <option value="osrkultury">ośr. kultury</option>
+                        <option value="osrzdrowia">ośr. zdrowia</option>
+                        <option value="poczta">poczta</option>
+                        <option value="pizzeria">pizzeria</option>
+                        <option value="szkola">szkoła</option>
+                        <option value="urzadgminy">urząd gminy</option>
+                    </select>
+                </div>
             </div>
             <div class="map">
                 <img class="mapofBuczek" src="img/Buczek.png" alt="Mapa Buczku">
