Changes in responsivity

--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
             <h1>Odnajdź się w Buczku</h1>
         </header>
         <main>
+            <div class="buttons_left">
+                <button class="ulbrojsce button mainmap"><span>Brojsce</span></button>
+                <button class="ulcicha button mainmap"><span>Cicha</span></button>
+                <button class="uldebowa button mainmap"><span>Dębowa</span></button>
+                <button class="ulglowna button mainmap"><span>Główna</span></button>
+                <button class="ulgorna button mainmap"><span>Górna</span></button>
+                <button class="ulkrotka button mainmap"><span>Krótka</span></button>
+                <button class="ullgow button mainmap"><span>Lgów</span></button>
+                <button class="ullipowa button mainmap"><span>Lipowa</span></button>
+                <button class="ullakowa button mainmap"><span>Łąkowa</span></button>
+                <button class="ulmodrzewiowa button mainmap"><span>Modrzewiowa</span></button>
+                <button class="ulosiedle button mainmap"><span>Os. Młodych</span></button>
+                <button class="ulparcela button mainmap"><span>Parcela</span></button>
+                <button class="ulparkowa button mainmap"><span>Parkowa</span></button>
+                <button class="ulpienki button mainmap"><span>Pieńki</span></button>
+            </div>
             <div class="input_area">
                 <div class="select_inputs">
                     <label for="street">Ulica</label>
@@ -148,6 +164,22 @@
                     <p>do Brodni</p>
                     <i class="fas fa-arrow-up"></i>
                 </div>
+            </div>
+            <div class="buttons_right">
+                <button class="ulpoludniowa button mainmap"><span>Południowa</span></button>
+                <button class="ulpoprzeczna button mainmap"><span>Poprzeczna</span></button>
+                <button class="ulprosta button mainmap"><span>Prosta</span></button>
+                <button class="ulsloneczna button mainmap"><span>Słoneczna</span></button>
+                <button class="ulspacerowa button mainmap"><span>Spacerowa</span></button>
+                <button class="ulspokojna button mainmap"><span>Spokojna</span></button>
+                <button class="ulspoldzielcza button mainmap"><span>Spółdzielcza</span></button>
+                <button class="ulszadek special_button"><span>Szadek</span></button>
+                <button class="ulszkolna button mainmap"><span>Szkolna</span></button>
+                <button class="ultopolowa button mainmap"><span>Topolowa</span></button>
+                <button class="ulwaska button mainmap"><span>Wąska</span></button>
+                <button class="ulwschodnia button mainmap"><span>Wschodnia</span></button>
+                <button class="ulwygwizdow special_button"><span>Wygwizdów</span></button>
+                <button class="ulzielona button mainmap"><span>Zielona</span></button>
             </div>
         </main>
         <footer>
