New css style - I LOVE THESE TECHNOLOGIES:)))

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Teko&display=swap&subset=latin-ext"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/a5d10ed2bf.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="new.css">
+    <link rel="stylesheet" href="mobile_style.css">
 </head>
 
 <body>
